# nm

./: .gitignore  Dockerfile  main.py  pyproject.toml  todo.txt
lightning_logs/version_0/: config.yaml  metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_2/: config.yaml  metrics.csv
src/nm/: __main__.py  client.py  config.py  datamodule.py  datamodules.py  datasets.py  download.py  models.py  module.py  modules.py  server.py  trainer.py  utils.py
