[project]
name = "nm"
version = "0.1.0"
description = "No More - AI powered social moderation tools."
readme = "README.md"
authors = [
    { name = "dbozbay", email = "107803920+dbozbay@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch<2.3",
    "dotenv>=0.9.9",
    "lightning>=2.5.2",
    "litserve>=0.2.12",
    "transformers==4.49",
    "jsonargparse[signatures]>=4.40.0",
    "kagglehub>=0.3.12",
    "pandas>=2.3.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
nm = "nm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ty.environment]
python = "./.venv"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM",
  "ERA",
  "D",
  "FIX",
  "S",
  "ANN401",
  "ISC001",
  "T201",
  "TD003",
  "PLR2004",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "ty>=0.0.1a11",
]
