[project]
name = "nm"
version = "0.1.0"
description = "No More - AI powered social moderation tools."
readme = "README.md"
authors = [
    { name = "dbozbay", email = "107803920+dbozbay@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch<2.3",
    "dotenv>=0.9.9",
    "lightning>=2.5.2",
    "litserve>=0.2.12",
    "transformers==4.49",
    "jsonargparse[signatures]>=4.40.0",
    "kagglehub>=0.3.12",
    "pandas>=2.3.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
nm = "nm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ty.environment]
python = "./.venv"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]

ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "ty>=0.0.1a11",
]
